cluster/apps/telegram/rajoybot/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app rajoybot
  namespace: telegram
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
      app.kubernetes.io/instance: *app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
        app.kubernetes.io/instance: *app
    spec:
      containers:
        - name: mariadb-rajoybot
          image: mariadb:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mariadb-rajoybot-volume
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 15m
              memory: 105Mi
            limits:
              cpu: 30m
              memory: 150Mi
        - name: *app
          image: ghcr.io/elraro/rajoybot:latest@sha256:cb2c2653cb248fa794104f0c3dd63d7649bd5041c63587cb2dbe889748fbb13c
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 15m
              memory: 105Mi
            limits:
              cpu: 30m
              memory: 150Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
        - name: mariadb-rajoybot-volume
          hostPath:
            path: /home/elraro/home-ops/volumes/rajoybot/mariadb-rajoybot-volume
